# talos

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  STATUS.md  pyproject.toml
.githooks/: post-checkout
.planning/: README.md
agent-skill/: README.md
agent-skill/attribute/: SKILL.md
agent-skill/distill-paper/: SKILL.md
agent-skill/escalate/: SKILL.md
agent-skill/graft-change/: SKILL.md
agent-skill/ratchet-experiment/: SKILL.md
agent-skill/repro-harness/: SKILL.md
constraints/: README.md
constraints/examples/toy_mlp/: evaluator.py  program.md  solution.py
docs/: pitfalls.md
docs/concepts/: eval-first.md  paradigm.md  workflow.md
docs/decisions/: 0001-ledger-and-audit-model.md
docs/human/: README.md  executor-lessons.md  release-evidence.md  testing-strategy.md
docs/research/: 2026-06-deep-research-1-design-blueprint.md  2026-06-deep-research-2-recommendation.md  README.md
docs/status/active/: testing-strategy.md
docs/survey/: agent-skills.md  compute-backends.md  eval-ecosystems.md  experiment-ledger.md  landscape.md  safety-sandboxing.md
docs/zh/: README.md
docs/zh/research/: 2026-06-24-survey-v1-landscape.zh-CN.md  2026-06-24-survey-v2-workflow.zh-CN.md  (+2 more)
examples/nanochat/: README.md  evaluator.py  proposals.py  run_local_gpu.py  skypilot_local_k8s_smoke.py  skypilot_ssh_smoke.py
examples/ratchet_demo/: README.md  run_demo.py
src/talos/: __init__.py  contract.py  ledger.py  orchestration.py  ratchet.py
tests/: test_ratchet_loop.py
(+4 files in other folders)
